starting footer html done

--- a/index.html
+++ b/index.html
@@ -675,9 +675,98 @@
 					</div>
 				</div>
 			</section>
+			<section id="engage">
+				<div class="engage__content container">
+					<h2>Empieza a usar Trello hoy</h2>
+					<div class="form__inputs">
+						<label for="email" class="email-label">
+							<input type="email" id="email" placeholder="Correo electrónico" />
+						</label>
+						<div
+							class="register-button blue-button"
+							role="button"
+							type="submit"
+						>
+							<p>Regístrate, ¡es gratis!</p>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
-		<!-- <footer>
-			<section id="engage"></section>
-		</footer> -->
+		<footer>
+			<section id="about-us">
+				<div class="about-us__content container">
+					<div class="footer__login">
+						<img
+							src="/media/logos/white-trello-logo.webp"
+							alt="Logo de Trello en color blanco"
+							width="130"
+						/>
+						<div role="button">
+							<p>Iniciar sesión</p>
+						</div>
+					</div>
+					<div class="about-us__items">
+						<div class="about-us__item">
+							<h4>Acerca de Trello</h4>
+							<p>Lo que hay detrás de los tableros.</p>
+						</div>
+						<div class="about-us__item">
+							<h4>Empleo</h4>
+							<p>Consulta los puestos vacantes en el equipo de Trello.</p>
+						</div>
+						<div class="about-us__item">
+							<h4>Aplicaciones</h4>
+							<p>
+								Descarga la aplicación de Trello en tu ordenador o dispositivo
+								móvil.
+							</p>
+						</div>
+						<div class="about-us__item">
+							<h4>Contacto</h4>
+							<p>
+								¿Necesitas algo? Ponte en contacto con nosotros y te ayudaremos.
+							</p>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section id="legal">
+				<div class="legal__content container">
+					<div class="language">
+						<img
+							src="/media/icons/language.png"
+							alt="Icono de bola del mundo"
+							width="20px"
+						/>
+						<div>
+							<p>Español</p>
+							<img
+								src="/media/icons/white-down-arrow.png"
+								alt="Flecha hacia abajo"
+								width="20"
+							/>
+						</div>
+					</div>
+					<div class="legal__items">
+						<ul>
+							<li><a href=""></a></li>
+							<li><a href=""></a></li>
+							<li><a href=""></a></li>
+							<span></span>
+						</ul>
+					</div>
+					<div class="rrss">
+						<ul>
+							<li><img src="" alt="" /></li>
+							<li><img src="" alt="" /></li>
+							<li><img src="" alt="" /></li>
+							<li><img src="" alt="" /></li>
+							<li><img src="" alt="" /></li>
+						</ul>
+					</div>
+				</div>
+			</section>
+		</footer>
 	</body>
 </html>
