rrss logos created

--- a/index.html
+++ b/index.html
@@ -750,19 +750,61 @@
 					</div>
 					<div class="legal__items">
 						<ul>
-							<li><a href=""></a></li>
-							<li><a href=""></a></li>
-							<li><a href=""></a></li>
-							<span></span>
+							<li><a href="">Tus opciones de privacidad</a></li>
+							<li><a href="">Política de privacidad</a></li>
+							<li>
+								<a href=""></a>
+								Términos
+							</li>
+							<span>Copyright © 2023 Atlassian</span>
 						</ul>
 					</div>
 					<div class="rrss">
 						<ul>
-							<li><img src="" alt="" /></li>
-							<li><img src="" alt="" /></li>
-							<li><img src="" alt="" /></li>
-							<li><img src="" alt="" /></li>
-							<li><img src="" alt="" /></li>
+							<li>
+								<a href="#">
+									<div class="rrss__icon">
+										<img
+											src="/media/icons/instagram.png"
+											alt="Logo de Instagram"
+										/>
+									</div>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<div class="rrss__icon">
+										<img
+											src="/media/icons/facebook.png"
+											alt="Logo de Facebook"
+										/>
+									</div>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<div class="rrss__icon">
+										<img
+											src="/media/icons/linkedin.png"
+											alt="Logo de LinkedIn"
+										/>
+									</div>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<div class="rrss__icon">
+										<img src="/media/icons/twitter.png" alt="Logo de Twitter" />
+									</div>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<div class="rrss__icon">
+										<img src="/media/icons/youtube.png" alt="Logo de Youtube" />
+									</div>
+								</a>
+							</li>
 						</ul>
 					</div>
 				</div>
