--- a/index.html
+++ b/index.html
@@ -734,29 +734,32 @@
 			<section id="legal">
 				<div class="legal__content container">
 					<div class="language">
-						<img
-							src="/media/icons/language.png"
-							alt="Icono de bola del mundo"
-							width="20px"
-						/>
-						<div>
-							<p>Español</p>
+						<div class="language__icon">
 							<img
-								src="/media/icons/white-down-arrow.png"
-								alt="Flecha hacia abajo"
-								width="20"
+								src="/media/icons/language.png"
+								alt="Icono de bola del mundo"
 							/>
+						</div>
+						<div class="language__selector">
+							<p>Español</p>
+							<div class="language__selector__arrow">
+								<img
+									src="/media/icons/white-down-arrow.png"
+									alt="Flecha hacia abajo"
+								/>
+							</div>
 						</div>
 					</div>
 					<div class="legal__items">
 						<ul>
-							<li><a href="">Tus opciones de privacidad</a></li>
-							<li><a href="">Política de privacidad</a></li>
+							<li><a href="#">Tus opciones de privacidad</a></li>
+							<li><a href="#">Política de privacidad</a></li>
 							<li>
-								<a href=""></a>
-								Términos
+								<a href="#">Términos</a>
 							</li>
-							<span>Copyright © 2023 Atlassian</span>
+							<li>
+								<span>Copyright © 2023 Atlassian</span>
+							</li>
 						</ul>
 					</div>
 					<div class="rrss">
